--- a/Conquer/index.html
+++ b/Conquer/index.html
@@ -16,18 +16,18 @@
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mx-auto mt-sm-3">
+        <ul class="navbar-nav mx-auto text-center mt-sm-3">
           <li class="nav-item">
-            <a class="nav-link" href="#">Homepage</a>
+            <a class="nav-link" href="#home">Homepage</a>
           </li>
           <li class="nav-item ml-md-4 ml-sm-0">
-            <a class="nav-link" href="#">About Us</a>
+            <a class="nav-link" href="#img">About Us</a>
           </li>
           <li class="nav-item ml-md-4 ml-sm-0">
-            <a class="nav-link" href="#">Services</a>
+            <a class="nav-link" href="#services">Services</a>
           </li>
           <li class="nav-item ml-md-4 ml-sm-0">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="#contact">Contact</a>
           </li>
           <li class="nav-item ml-md-4 ml-sm-0">
             <a class="nav-link" href="#">External</a>
@@ -36,7 +36,7 @@
       </div>
     </nav>
 
-    <section>
+    <section id="home">
       <div class="row">
         <div class="col-lg-12 bg-img">
             <h1 class="text-center text-white"> conquer </h1>
@@ -187,7 +187,7 @@
       </div>
     </section>
 
-    <section>
+    <section id="contact">
       <div class = "container-fluid px-0">
         <div class = "row">
           <div class = "col-lg-12" id = "img-bg">
